fixed opacity and z-index issues

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ function used to set the color of at the tailwind.config file
 @layer base {
 	:root {
 		--color-text-base: 255, 255, 255;
-		--color-text-muted: 214, 206, 255;;
+		--color-text-muted: 214, 206, 255;
+		--color-text-muted-thin: 214, 206, 255, 0.1;
 		--color-text-inverted: 2, 255, 2;
 		--color-fill: 19, 15, 15;
 		--color-button: 2, 255, 2;
@@ -23,6 +24,7 @@ function used to set the color of at the tailwind.config file
 	.Purple-Dim {
 		--color-text-base: 137, 2, 179;
 		--color-text-muted: 214, 206, 255;
+		--color-text-muted-thin: 214, 206, 255, 0.1;
 		--color-text-inverted: 255, 199, 14;
 		--color-fill: 22, 38, 49;
 		--color-button: 255, 199, 14;
@@ -35,6 +37,7 @@ function used to set the color of at the tailwind.config file
 	.Navy-Dim {
 		--color-text-base: 204, 214, 246;
 		--color-text-muted: 214, 206, 255;
+		--color-text-muted-thin: 214, 206, 255, 0.1;
 		--color-text-inverted: 255, 199, 14;
 		--color-fill: 22, 38, 49;
 		--color-button: 100, 255, 218;
@@ -47,6 +50,7 @@ function used to set the color of at the tailwind.config file
 	.Light {
 		--color-text-base: 107, 3, 121;
 		--color-text-muted: 124, 89, 126;
+		--color-text-muted-thin: 124, 89, 126, 0.1;
 		--color-text-inverted: 255, 199, 14;
 		--color-fill: 22, 38, 49;
 		--color-button: 154, 47, 255;
@@ -73,7 +77,6 @@ function used to set the color of at the tailwind.config file
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  
 }
 
 body {
